--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/julioolvr/metalsmith-summary/issues"
   },
-  "homepage": "https://github.com/julioolvr/metalsmith-summary#readme"
+  "homepage": "https://github.com/julioolvr/metalsmith-summary#readme",
+  "dependencies": {
+    "debug": "^2.6.6"
+  }
 }
