--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/julioolvr/metalsmith-summary#readme",
   "dependencies": {
-    "debug": "^2.6.6"
+    "debug": "^2.6.6",
+    "minimatch": "^3.0.3"
   }
 }
